# FastAPI-template

./: .env.temp  README.md  alembic.ini  pyproject.toml
app/: config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 20220213_1545_init.py  20220216_1528_init.py
app/api/: api.py  deps.py
app/api/endpoints/: items.py  users.py
app/api/routes/: login.py  users.py
app/core/: security.py
app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
app/db/: base.py  session.py
app/migration/versions/: 20220510_1605_init.py
app/models/: __init__.py  item.py  user.py
app/schemas/: __init__.py  item.py  token.py  user.py
docker/: docker-compose-postgres.yml  docker-compose.yml
