[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}
sqlmodel = "^0.0.6"
fastapi-users = {extras = ["sqlalchemy2"], version = "^9.2.4"}
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"
alembic = "^1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"