[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.0"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"
alembic = "^1.7.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-multipart = "^0.0.7"
bcrypt = "^3.2.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.36"}
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"